<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculIMCActivity">


    <LinearLayout
        android:id="@+id/linearform"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:text="@string/Texte_imc"
        android:textSize="30sp"/>


            <EditText
                android:id="@+id/edtnom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:hint="@string/placeholder_nom"
                android:textSize="20sp"
                android:textAlignment="textStart"/>


            <EditText
                android:id="@+id/edtPrenom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:hint="@string/placeholder_prenom"
                android:textSize="20sp"
                android:textAlignment="textStart"/>


        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <NumberPicker
                android:id="@+id/numberPickerTaille"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:layout_marginStart="80dp"/>

            <TextView
                android:id="@+id/Taille"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:paddingStart="80dp"
                android:text="@string/Taille_texte"
                />

            <NumberPicker
                android:id="@+id/numberPickerPoids"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="80dp"
                />

            <TextView
                android:id="@+id/poids"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:paddingStart="210dp"
                android:text="@string/Poids_texte"/>

        </RelativeLayout>


    </LinearLayout>


</ScrollView>